Species list table: stabilize column widths during filtering.
Also improve the table colors, making only the filter boxes white. (#142)

--- a/gobotany/simplekey/templates/simplekey/species_list.html
+++ b/gobotany/simplekey/templates/simplekey/species_list.html
@@ -19,12 +19,12 @@
                 <table id="species">
                     <thead>
                         <tr>
-                            <th>Scientific Name</th>
-                            <th>Common Name</th>
-                            <th>Family</th>
-                            <th>New England Distribution</th>
+                            <th class="name">Scientific Name</th>
+                            <th class="common">Common Name</th>
+                            <th class="family">Family</th>
+                            <th class="dist">New England Distribution</th>
                             <th class="native">North American Native</th>
-                            <th>Wetland Code</th>
+                            <th class="wetland">Wetland Code</th>
                             <th class="group">Group</th>
                             <th class="subgroup">Subgroup</th>
                         </tr>
