--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -26,6 +26,7 @@ ol li, ul li {
 /* end Claro fixes */
 
 /* Global page structure */
+
 header, .content, footer {
     width: 100%;
 }
@@ -117,7 +118,7 @@ nav #search button:active {
     text-decoration: none;
 }
 
-#home li.home a, #home li a:hover {
+#home header li.home a, #home header li a:hover {
 	background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent;	
 }
 
@@ -148,9 +149,30 @@ footer .support {
 	padding: 18px 0;
 }
 footer a {
+    color: #000;
+}
+footer a:hover {
+    text-decoration: none;
+}
+footer a[href] {
 	color: #508e31;	
 }
-
+footer a[href]:hover {
+    text-decoration: underline;
+}
+footer ul {
+    font-size: 9px;
+    list-style-type: none;
+}
+footer li {
+    display: inline;
+}
+footer li:after {
+    content: " |";
+}
+footer li:last-child:after {
+    content: none;
+}
 footer h6 {
 	font-family: $body-font;
 	font-size: 11px;
@@ -2701,3 +2723,234 @@ img.char-value-larger {
     font-family: $headings-font;
     font-size: 13px;
 }
+
+/* Smartphone-size screen styles */
+
+@media only screen and (max-width: 400px) {
+    body {
+        padding-top: 110px;
+    }
+    .top-level header {
+        height: 80px;
+    }
+    body, .container, .top-level header h1 a, #home #banner #overlay,
+    #home #banner > img {
+        width: 320px;
+    }
+    .top-level header h1 a {
+        background-size: 320px 58px;
+        height: 58px;
+    }
+    #nav {
+        left: 40px;
+        width: 310px;
+    }
+    #home #banner #overlay {
+        top: 115px;
+    }
+    #home #banner > img {
+        height: 115px;
+    }
+    #home #banner + .three-col {
+        padding-top: 380px;
+    }
+}
+@media only screen and (min-width: 401px) and (max-width: 600px) {
+    body {
+        padding-top: 75px;
+    }
+    body, .container, .top-level header h1 a, #home #banner #overlay,
+    #home #banner > img {
+        width: 480px;
+    }
+    .top-level header {
+        height: 100px;
+    }
+    .top-level header h1 a {
+        background-size: 480px 86px;
+        height: 86px;
+    }
+    #nav {
+        left: 30px;
+        width: 470px;
+    }
+    #home #banner #overlay {
+        top: 172px;
+    }
+    #home #banner > img {
+        height: 172px;
+    }
+    #home #banner + .three-col {
+        padding-top: 400px;
+    }
+}
+/* These styles are common to both smartphone widths */
+@media only screen and (max-width: 600px) {
+    body {
+        margin: 0 auto;
+        padding: 0;
+    }
+    .container {
+        padding: 0;
+    }
+    .top-level nav {
+        background: none;
+    }
+    .top-level header h1 {
+        margin: 0;
+        width: inherit;
+    }
+    .top-level header h2 a, .app header h2 a {
+        background-size: 80px 44px;
+        float: right;
+        height: 44px;
+        width: 80px;
+    }
+    header h2 {
+        float: none;
+    }
+    header nav ul {
+        display: none;  /* will use bottom navigation instead */
+    }
+    footer, footer div.container {
+        height: auto;
+    }
+    footer {
+        margin: 14px 0 0;
+    }
+    footer .container div {
+        width: auto;
+    }
+    footer div div {
+        height: auto;
+    }
+    footer p {
+        margin: 0;
+    }
+    footer a {
+        font-size: 11px;
+    }
+    footer .publisher, footer .navigation {
+        float: none;
+        margin: 0;
+        padding: 0;
+    }
+    footer .publisher {
+        margin-bottom: 14px;
+        padding: 0 6px;
+    }
+    footer .navigation h6:first-child {
+        display: none;
+    }
+    footer .navigation > ul:first-of-type li {
+        display: block;
+        margin: 0 0 1px 0;
+    }
+    footer .navigation > ul:first-of-type li:after {
+        content: none;
+    }
+    footer .navigation > ul:first-of-type li a {
+        background: #85c446;
+        color: #fff;
+        display: block;
+        font-family: $headings-font;
+        font-size: 14px;
+        padding: 14px 6px;
+        text-decoration: none;
+    }
+    footer .navigation > ul:first-of-type li a[href] {
+        background: #508e31;
+        color: #fff;
+    }
+    footer .navigation > h6:nth-of-type(2) {
+        margin: 14px 14px 4px 71px;
+    }
+    footer .navigation > h6:nth-of-type(2):after {
+        content: ":";
+    }
+    footer .navigation > h6:nth-of-type(2),
+    footer .navigation > ul:nth-of-type(2) {
+        display: inline-block;
+
+    }
+    footer .navigation > ul:nth-of-type(2) li {
+        margin-right: 14px;
+    }
+    footer .navigation > ul:nth-of-type(2) li:after {
+        content: none;
+    }
+    footer .support {
+        margin: 14px 0;
+        padding: 0;
+    }
+    footer .support img {
+        padding-bottom: 6px;
+    }
+    #home #banner {
+        margin: 0;
+        position: relative;
+    }
+    #home #banner #overlay {
+        background: #f7fbe9;
+        height: auto;
+        left: 0;
+        padding: 0;
+        text-align: center;
+    }
+    #home #banner h2 {
+        margin: 0;
+    }
+    #home #banner p {
+        padding: 0 6px;
+    }
+    #home #banner a#cta {
+        background-position: 50% 0;
+        margin: 4px 6px;
+    }
+    #home .three-col {
+        background: none;
+        float: none;
+        height: inherit;
+        margin: 14px 0;
+        padding: 0 6px;
+        width: auto;
+    }
+    #home .three-col a.learn-more {
+        margin: 4px 0 0;
+    }
+    #home #potd .details {
+        margin: 0;
+        position: inherit;
+        width: inherit;
+    }
+    #home #potd .details p {
+        height: inherit;
+        overflow: inherit;
+    }
+    #home #potd .details a {
+        position: inherit;
+        top: 0;
+    }
+    #home .donate {
+        margin: 0;
+    }
+    #home .donate p {
+        margin: 8px;
+        padding: 0;
+    }
+    #home .donate a {
+        float: none;
+        margin: 4px 0;
+    }
+    #main, .list-item .details {
+        float: none;
+        width: inherit;
+    }
+    #plant-id-3 #main {
+        float: right;
+        margin-left: 230px;
+        width: 355px;
+    }
+}
+
+
