Simplify footer styling a bit. (#151)

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -13,7 +13,7 @@
 
                 <div class="navigation">
                     <h6>Go Botany</h6>
-                    <ul>
+                    <ul class="sections">
                         <li><a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a></li>
                         <li><a href="{% url simplekey %}">Simple Key</a></li>
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
@@ -21,7 +21,7 @@
                         <li><a href="{% url simplekey-help-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
-                    <ul>
+                    <ul class="legal">
                         <li><a href="{% url privacy-policy %}">Privacy Policy</a></li>
                         <li><a href="{% url terms-of-use %}">Terms of Use</a></li>
                     </ul>
