--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -3775,18 +3775,18 @@ img.char-value-larger {
   }
 
   /* line 2845, ../sass/styles.scss */
-  footer .navigation > ul:first-of-type li {
+  footer .navigation > ul.sections li {
     display: block;
     margin: 0 0 1px 0;
   }
 
   /* line 2849, ../sass/styles.scss */
-  footer .navigation > ul:first-of-type li:after {
+  footer .navigation > ul.sections li:after {
     content: none;
   }
 
   /* line 2852, ../sass/styles.scss */
-  footer .navigation > ul:first-of-type li a {
+  footer .navigation > ul.sections li a {
     background: #85c446;
     color: #fff;
     display: block;
@@ -3798,7 +3798,7 @@ img.char-value-larger {
   }
 
   /* line 2862, ../sass/styles.scss */
-  footer .navigation > ul:first-of-type li a:after {
+  footer .navigation > ul.sections li a:after {
     content: " >";
     font-weight: bold;
     position: absolute;
@@ -3806,7 +3806,7 @@ img.char-value-larger {
   }
 
   /* line 2868, ../sass/styles.scss */
-  footer .navigation > ul:first-of-type li a[href] {
+  footer .navigation > ul.sections li a[href] {
     background: #508e31;
     color: #fff;
   }
@@ -3823,17 +3823,17 @@ img.char-value-larger {
 
   /* line 2879, ../sass/styles.scss */
   footer .navigation > h6:nth-of-type(2),
-  footer .navigation > ul:nth-of-type(2) {
+  footer .navigation > ul.legal {
     display: inline-block;
   }
 
   /* line 2883, ../sass/styles.scss */
-  footer .navigation > ul:nth-of-type(2) li {
+  footer .navigation > ul.legal li {
     margin-right: 14px;
   }
 
   /* line 2886, ../sass/styles.scss */
-  footer .navigation > ul:nth-of-type(2) li:after {
+  footer .navigation > ul.legal li:after {
     content: none;
   }
 
