--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -2842,14 +2842,14 @@ img.char-value-larger {
     footer .navigation h6:first-child {
         display: none;
     }
-    footer .navigation > ul:first-of-type li {
+    footer .navigation > ul.sections li {
         display: block;
         margin: 0 0 1px 0;
     }
-    footer .navigation > ul:first-of-type li:after {
+    footer .navigation > ul.sections li:after {
         content: none;
     }
-    footer .navigation > ul:first-of-type li a {
+    footer .navigation > ul.sections li a {
         background: #85c446;
         color: #fff;
         display: block;
@@ -2859,13 +2859,13 @@ img.char-value-larger {
         position: relative;
         text-decoration: none;
     }
-    footer .navigation > ul:first-of-type li a:after {
+    footer .navigation > ul.sections li a:after {
         content: " >";
         font-weight: bold;
         position: absolute;
         right: 14px;
     }
-    footer .navigation > ul:first-of-type li a[href] {
+    footer .navigation > ul.sections li a[href] {
         background: #508e31;
         color: #fff;
     }
@@ -2876,14 +2876,14 @@ img.char-value-larger {
         content: ":";
     }
     footer .navigation > h6:nth-of-type(2),
-    footer .navigation > ul:nth-of-type(2) {
+    footer .navigation > ul.legal {
         display: inline-block;
 
     }
-    footer .navigation > ul:nth-of-type(2) li {
+    footer .navigation > ul.legal li {
         margin-right: 14px;
     }
-    footer .navigation > ul:nth-of-type(2) li:after {
+    footer .navigation > ul.legal li:after {
         content: none;
     }
     footer .support {
