On small screens, do not resize the sidebar height.
For small-screen devices, where we place the sidebar after the main
content, do not resize the vertical sidebar to fit the page as is
done in the regular large-screen version of the site. (#151)

--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -80,7 +80,7 @@
 
             </div>
 
-            <div id="sidebar" style="height: 1639px;">
+            <div id="sidebar">
                 {% include "simplekey/_sidebar_items.html" %}
             </div>
 
