--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -217,7 +217,7 @@
 
             </div>
 
-            <div id="sidebar" style="height: 1116px">
+            <div id="sidebar">
                 <div class="section map">
                     <h5>New England Distribution</h5>
                     {% include "simplekey/_map_attribution.html" %}
