For #161, created a /full/X/Y/ level-3 page
The page includes every species in its pile.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -6,6 +6,7 @@
 {% block js_require %}
     original_location_hash = window.location.hash; // for results_overlay.js
     var args = {
+        key: '{{ key }}',
         pile_slug: '{{ pile.slug }}'
     };
     require(['simplekey/results'], function(results) {
