Small screens: style navigation bar and link to sections list. (#151)

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -6,6 +6,7 @@
                 {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
                 Botany: Discover thousands of New England plants</a></h1>
             <nav>
+            <a href="#footer-nav">+<span>sections</span></a>
                 <div id="search">
                     <form id="search-suggest" action="/search/" autocomplete="off">
                         <button>Search</button>
