--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -13,7 +13,7 @@
 
                 <div class="navigation">
                     <h6>Go Botany</h6>
-                    <ul class="sections">
+                    <ul id="footer-nav" class="sections">
                         <li><a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a></li>
                         <li><a href="{% url simplekey %}">Simple Key</a></li>
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
