For 161: generalized the level2 page for both keys
The level2 view can now display either the Simple or Full key, and all
reverse URLs pointing back at the page now supply information about
which key needs to be targeted.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -26,7 +26,7 @@
             <div id="main">
                 <div id="breadcrumb">
                     <p>You are here: <a href="{% url simplekey %}">Simple Key</a>
-                    &gt; <a href="{% url simplekey-pilegroup pilegroup.slug %}"
+                    &gt; <a href="{% url level2 key pilegroup.slug %}"
                         >{{ pilegroup.friendly_title|lower|capfirst }}</a>
                     &gt; <span>{{ pile.friendly_title }}</span></p>
                 </div>
